--- a/_posts/2015-08-04-how-to-use.md
+++ b/_posts/2015-08-04-how-to-use.md
@@ -3,13 +3,13 @@ layout: post
 title: "How to use"
 date: 2015-08-03 03:32:44
 image: '/assets/img/'
-description: 'First steps to use this template'
+description: 'First steps to use t'
 tags:
 - jekyll 
 - template 
 categories:
-- I love Jekyll
-twitter_text: 'How to install and use this template'
+- I love
+twitter_text: 'How to install and us'
 ---
 
 This is a simple and minimalist template for Jekyll designed for developers that want to write blog posts but don't want to care about frontend stuff.
